# rules_scala_intellij_debug_example

./: .bazelrc  .gitignore  WORKSPACE  build.sbt  dependencies.yaml  generate-scala-deps.sh
src/main/: BUILD.bazel
src/main/java/: BUILD.bazel  Ghost.java  JavaBinary.java  MultiplexWorker.java  ProxyWorker.java
src/main/scala/: BUILD.bazel  ExampleScalaBinary.scala  ScalaBinary.scala  TestClassOne.scala  TestClassThree.scala  TestClassTwo.scala
src/test/: BUILD.bazel  ExampleScalaTest.scala  ExampleSpecs2Test.scala  ExampleTest.scala
src/test/scala/: BUILD.bazel  ExampleScalaTest.scala  ExampleSpecs2Test.scala  Hello.java
tools/: install-bazel-deps.sh  install-tool.sh
