load(
    "@rules_scala_annex//rules:scala.bzl",
    scala_binary = "annex_scala_binary",
    scala_library = "annex_scala_library",
)

scala_binary(
    name = "ScalaBinary",
    srcs = ["ScalaBinary.scala"],
    main_class = "foo.ScalaBinary",
    deps = [
    	":TestClassOne",
    	":TestClassTwo",
    ],
)

scala_library(
	name = "TestClassOne",
	srcs = ["TestClassOne.scala"],
)

scala_library(
	name = "TestClassTwo",
	srcs = ["TestClassTwo.scala"],
)
